--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "cryptojs.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test`": "echo \"Error: no test specified\" && exit 1",
+    "simulate":"nodemon simulation/megaScraper.js ",
+    "dev":"nodemon simulation/megaScraper.js "
   },
   "keywords": [],
   "author": "",
@@ -11,6 +13,7 @@
   "description": "",
   "dependencies": {
     "jsdom": "^25.0.1",
+    "nodemon": "^3.1.7",
     "puppeteer": "^23.9.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
