--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "mega",
   "version": "1.0.0",
   "main": "cryptojs.js",
+  "type": "module",
   "scripts": {
     "test`": "echo \"Error: no test specified\" && exit 1",
-    "simulate":"nodemon simulation/megaScraper.js ",
-    "dev":"nodemon simulation/megaScraper.js "
+    "simulate": "nodemon simulation/megaScraper.js ",
+    "dev": "nodemon simulation/megaScraper.js "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
+    "express": "^4.21.2",
     "jsdom": "^25.0.1",
     "nodemon": "^3.1.7",
-    "puppeteer": "^23.9.0",
+    "puppeteer": "^23.10.4",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "typescript": "^5.7.2"
