--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "crypto-js": "^4.2.0",
     "express": "^4.21.2",
     "jsdom": "^25.0.1",
     "nodemon": "^3.1.7",
